--- a/src/AutoCadObjectEditor.csproj
+++ b/src/AutoCadObjectEditor.csproj
@@ -108,6 +108,7 @@
     <Compile Include="DB\AutoCadDbFacade.cs" />
     <Compile Include="DB\DBObjectExtensions.cs" />
     <Compile Include="Editor\IChangeable.cs" />
+    <Compile Include="DependencyObjectExtensions.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Controls\CircleControl.xaml.cs">
       <DependentUpon>CircleControl.xaml</DependentUpon>
@@ -132,6 +133,7 @@
     <Compile Include="Editor\EditorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
+    <Compile Include="ValidationRules\LayerNameValidationRule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
