--- a/src/AutoCadObjectEditor.csproj
+++ b/src/AutoCadObjectEditor.csproj
@@ -95,6 +95,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -105,10 +106,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB\AutoCadDbFacade.cs" />
-    <Compile Include="DB\DBObjectExtensions.cs" />
+    <Compile Include="Helpers\AutoCadDbFacade.cs" />
+    <Compile Include="Helpers\DBObjectExtensions.cs" />
     <Compile Include="Editor\IChangeable.cs" />
-    <Compile Include="DependencyObjectExtensions.cs" />
+    <Compile Include="Helpers\DependencyObjectExtensions.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Controls\CircleControl.xaml.cs">
       <DependentUpon>CircleControl.xaml</DependentUpon>
@@ -132,7 +133,6 @@
     <Compile Include="EditableObjects\EditablePoint.cs" />
     <Compile Include="Editor\EditorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelayCommand.cs" />
     <Compile Include="ValidationRules\LayerNameValidationRule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +156,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Editor\EditorView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
